--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ coverage==4.3.4
 cryptography==2.2.2
 dj-database-url==0.4.2
 Django==2.0.4
+django-filter==1.1.0
 django-model-utils==3.1.1
 django-phonenumber-field==1.3.0
 django-storages==1.6.6
+djangorestframework==3.8.2
 docopt==0.6.2
 docutils==0.14
 Faker==0.7.3
@@ -54,3 +56,7 @@ tornado==4.5.2
 urllib3==1.22
 watchdog==0.8.3
 whitenoise==3.3.0
+Markdown==2.6.11
+pprint==0.1
+simplejson==3.14.0
+sqlparse==0.2.4
